[package]
name = "serde_bitflags"
version = "0.1.0"
authors = ["Steelbirdy <patrickammons@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
paste = "1.0.5"
serde_json = "1.0.64"

[dependencies.serde]
version = "1.0.126"
features = ["derive"]